# rust-exercise

./: Cargo.toml  Makefile  memory.x
src/: main.rs
